# Abaddon

./: abaddon.gd  abaddon.gd.uid  abaddon.tscn  arc.tscn  camera_env_1.tres  camera_rig.gd  camera_rig.gd.uid  default_bus_layout.tres  environment.tres  event_bus.tscn  gui_root.tscn  hologram.gdshader.uid  hover_indicator.gd  hover_indicator.gd.uid  icon.png.import  icon.svg.import  main.py  orbit.gd  orbit.gd.uid  planet.tres  project.godot  pyproject.toml  root.gd  root.gd.uid  root.tscn  selector.gd  selector.gd.uid  ship_builder.gd.uid  ship_builder.tscn  space.tres  ui_overlay_debug.gd  ui_overlay_debug.gd.uid  vhs.gdshader.uid
abaddon/: earth_ephemerides.txt  ephemeris.txt  horizons.py  horizons_input.txt  main.py  physical_data.txt  planetary_orbits.py  spice.py  spkmerge
assets/: system_objects.gd  system_objects.gd.uid
audio/: scroll_whoosh.wav.import
data/: 199_20000101_20260101_1y.json  299_20000101_20260101_1y.json  499_20000101_20260101_1y.json  599_20000101_20260101_1y.json  699_20000101_20260101_1y.json  799_20000101_20260101_1y.json  899_20000101_20260101_1y.json  earth_20000101_20260101.json
docs/: .$star_system.drawio.bkp  .$triangle_strip_circle.drawio.bkp  grid_loading.drawio  star_system.drawio  triangle_strip_circle.drawio
environments/: galaxy_panorama.tres  grid_panorama.tres  space.tres
events/: body.gd  body.gd.uid  body_selected.gd  body_selected.gd.uid  camera.gd  camera.gd.uid  time.gd  time.gd.uid
models/: Abaddon.blend  Abaddon.blend.import  Abaddon.blend1  orbit_simple.glb  orbit_simple.glb.import
scenes/: camera_rig.gd  (+5 more)
(+977 files in other folders)
