[project]
name = "abaddon"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "astropy>=7.2.0",
    "devtools>=0.12.2",
    "numpy>=2.4.4",
    "pendulum>=3.2.0",
    "polars>=1.40.1",
    "requests>=2.34.2",
    "spiceypy>=8.1.0",
]

[tool.basedpyright]
reportConstantRedefinition = false
reportMissingTypeStubs = false
reportUntypedFunctionDecorator = false
reportUnknownArgumentType = false
reportUnknownMemberType = false
reportUnknownVariableType = false
reportUnusedCallResult = false
reportImportCycles = false
reportExplicitAny = false
reportAny = false
reportCallInDefaultInitializer = false
reportMissingSuperCall = false
reportUnnecessaryComparison = false
reportUnusedFunction = true
